syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Empty {}

message CreateCategoryResponse {
  string id = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message GetCategoryByIdRequest {
  string id = 1;
}

message GetCategoryByIdResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
  rpc ListCategories(Empty) returns (ListCategoriesResponse) {}
  rpc GetCategoryById(GetCategoryByIdRequest) returns (GetCategoryByIdResponse) {}
  rpc CreateCategoryStream(stream CreateCategoryRequest) returns (ListCategoriesResponse) {}
  rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
}